# connect-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  buf.gen.yaml  codecov.yml  connect-python.code-workspace  justfile  mkdocs.yml  poe_tasks.toml  pyproject.toml  renovate.json  zensical.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-to-project.yaml  ci.yaml  ci.yml  codeql.yml  dev-release.yml  docs.yaml  release-otel.yaml  release.yaml  release.yml
conformance/: buf.gen.yaml  pyproject.toml
conformance/test/: _cov_embed.py  _util.py  client.py  config.yaml  server.py  test_client.py  test_server.py
connectrpc-otel/: README.md  pyproject.toml
connectrpc-otel/connectrpc_otel/: __init__.py  _instrumentor.py  _interceptor.py  _semconv.py  _version.py
connectrpc-otel/test/: conftest.py  test_instrumentor.py  test_interceptor.py  test_traces.py
docs/: api.md  conf.py  deployment.md  development.md  errors.md  examples.md  get-requests-and-caching.md  getting-started.md  grpc-compatibility.md  headers-and-trailers.md  index.md  interceptors.md  streaming.md  testing.md  usage.md
example/: buf.gen.yaml  pyproject.toml
example/example/: _eliza.py  eliza_client.py  eliza_client_sync.py  eliza_connect.py  eliza_pb2.py  eliza_pb2_grpc.py  eliza_service.py  eliza_service_sync.py
examples/: Makefile  buf.gen.yaml  eliza_pb2_connect.py
noextras/: pyproject.toml
noextras/test/: test_compression_default.py
proto/: status.proto
protoc-gen-connect-python/: .goreleaser.yaml  go.mod  go.sum  main.go  pyproject.toml
protoc-gen-connect-python/generator/: config.go  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-connect-python/scripts/: generate_wheels.py
protoc-gen-connectrpc/: README.md  pyproject.toml
protoc-gen-connectrpc/protoc_gen_connectrpc/: __init__.py
src/connectrpc/: __init__.py  _asyncio_timeout.py  _client_async.py  _client_shared.py  _client_sync.py  _codec.py  _compression.py  _envelope.py  _headers.py  _interceptor_async.py  _interceptor_sync.py  _protocol.py  _protocol_connect.py  _protocol_grpc.py  _protocol_server.py  _response_metadata.py  _server_async.py  _server_shared.py  _server_sync.py  _version.py  codec.py  errors.py  generator.py  method.py  protocol.py  request.py
src/connectrpc/_gen/: status_pb.py  status_pb2.py
src/connectrpc/compat/: __init__.py  _codec.py
src/connectrpc/compression/: __init__.py  brotli.py  gzip.py  zstd.py
test/: _util.py  buf.gen.yaml  haberdasher_connect.py  haberdasher_pb.py  haberdasher_pb2.py  haberdasher_pb2.pyi  test_client.py  test_client_shared.py  test_codec.py  test_compression.py  test_details.py  test_errors.py  test_example.py  test_grpc.py  test_headers.py  test_http.py  test_interceptor.py  test_lifespan.py  test_request_context_typing.py  test_roundtrip.py  test_roundtrip_google_compat.py
test/google_compat/: haberdasher_connect.py  haberdasher_pb2.py
test/proto/: haberdasher.proto
tests/conformance/: buf.gen.yaml  conformance.py  conformance_server.py  sync_server_config.yaml
tests/conformance/connectrpc/conformance/v1/: service_pb2_connect.py
