[project]
name = "connectrpc"
version = "0.11.0"
description = "Server and client runtime library for Connect RPC"
readme = "README.md"
requires-python = ">= 3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [
  { name = "Anuraag Agrawal", email = "anuraaga@gmail.com" },
  { name = "Spencer Nelson", email = "spencer@firetiger.com" },
  { name = "Stefan VanBuren", email = "stefan@vanburen.xyz" },
  { name = "Yasushi Itoh", email = "i2y.may.roku@gmail.com" },
]
keywords = ["connect", "grpc", "http", "protobuf", "rpc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "protobuf-py==0.1.1",
  "pyqwest>=0.5.1",
]

[project.urls]
Documentation = "https://connectrpc.com/docs/python/getting-started/"
Homepage = "https://github.com/connectrpc/connect-py"
Issues = "https://github.com/connectrpc/connect-py/issues"
Repository = "https://github.com/connectrpc/connect-py"

[dependency-groups]
dev = [
  "example",
  "protoc-gen-connectrpc",
  "asgiref==3.11.1",
  "brotli==1.2.0",
  "buf-bin==1.71.0",
  "granian==2.7.7",
  "grpcio-tools==1.81.1",
  "gunicorn==26.0.0",
  "hypercorn==0.18.0",
  "poethepoet==0.47.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-timeout==2.4.0",
  "pyvoy==0.4.1",
  "ruff==0.15.20",
  "tombi==1.1.6",
  "ty==0.0.55",
  "types-grpcio==1.0.0.20260614",
  "types-protobuf==7.34.1.20260518",
  "typing_extensions==4.15.0",
  "uvicorn==0.49.0",
  "zstandard==0.25.0",
  # dev dependencies only used in subprojects. Optimal structure would include these
  # in the subproject itself, but then `uv sync` does not install them from the
  # workspace root. We strategically keep them here instead so the entire workspace
  # is ready for editing in an IDE with a simple sync command.
  # If the below issue is resolved, we can move them back to subprojects and configure
  # our default sync setting as --all-packages.
  # https://github.com/astral-sh/uv/issues/5737
  "opentelemetry-instrumentation-asgi==0.64b0",
  "opentelemetry-instrumentation-wsgi==0.64b0",
  "opentelemetry-sdk==1.43.0",
  "protobuf>=5.28",
  "protoc-gen-grpc-py==0.1.1",
  "protoc-gen-py==0.1.1",
]

docs = ["mkdocstrings-python==2.0.5", "zensical==0.0.46"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest]
# Turn all warnings into errors
filterwarnings = [
  "error",
  # Workaround https://github.com/open-telemetry/opentelemetry-python/issues/5231
  "ignore:SelectableGroups dict interface is deprecated. Use select.",
]
strict = true
testpaths = ["test"]
timeout = "1800"  # 30 min

[tool.ruff]
# Don't run ruff on generated code from external plugins.
extend-exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  # Same order as listed on https://docs.astral.sh/ruff/rules/
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "FBT",
  "B",
  "A",
  "COM818",  # Other comma rules are handled by formatting
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q004",  # Other quote rules are handled by formatting
  "RSE",
  "RET",
  # This rule is a bit strict since accessing private members within this package can be
  # useful to reduce public API exposure. But it is important to not access private members
  # of external dependencies so we enable it and ignore the locations where we need to.
  "SLF",
  "SIM",
  "SLOT",
  "TID",
  # TODO: Update TODOs then enable
  # "TD",
  "TC",
  "ARG",
  "PTH",
  "FLY",
  "I",
  "N",
  "PERF",
  "E",
  "W",
  # TODO: Flesh out docs and enable
  # "DOC"
  # "D",
  "F",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  # TODO: See if it makes sense to enable after a pass at reducing code duplication
  # "TRY",
]

# Document reasons for ignoring specific linting errors
ignore = [
  # Not applicable
  "AIR",
  # Dangerous false positives https://github.com/astral-sh/ruff/issues/4845
  "ERA",
  # Not Applicable
  "FAST",
  # Important to call user callbacks safely
  "BLE",
  # stdlib includes a module named code. This is less of an issue since users need to import a module so allow it
  "A005",
  # TODO: Consider using copyright headers
  "CPY",
  # Not Applicable
  "DJ",
  # It's fine to have TODOs
  "FIX",
  # Not Applicable
  "INT",
  # Even prevents pytest.raises around an iteration which is too strict
  "PT012",
  # Triggers for protocol implementations that don't need the arg too
  "ARG002",
  # Complexity checks usually reduce readability
  "C90",
  # Not Applicable
  "NPY",
  # Not Applicable
  "PD",
  # We use the Exception suffix instead
  "N818",
  # Handled by formatting
  "E111",
  "E114",
  "E117",
  "E501",
  "W191",
  # Low signal-to-noise ratio
  "PLR",
]

typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"conformance/test/**" = ["ANN", "INP", "SLF", "SIM115", "S101", "D"]
"example/**" = [
  "ANN",
  "S",  # Keep examples simpler, e.g. allow normal random
  "T20",
  "D",
]
"**/test_*.py" = [
  "ANN",
  "S101",
  "S603",
  "S607",
  "FBT",
  "EM",
  "INP",
  "SLF",
  "PERF",
  "D",
]
"**/*_grpc.py" = ["N", "FBT"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ty.src]
exclude = [
  # gRPC generated code references `grpc.experimental`, which is not exposed by the
  # `grpc` package's public API. See https://github.com/grpc/grpc/issues/39555.
  "**/*_pb2_grpc.py",
]

[tool.ty.environment]
# Conformance test files import generated code as `from gen.connectrpc...` and
# sibling modules like `_util`/`_cov_embed`. Pytest and the launched server/client
# subprocesses put `conformance/test/` on sys.path; teach ty to do the same.
extra-paths = ["conformance/test"]

[tool.uv.build-backend]
module-name = "connectrpc"

[tool.uv.workspace]
members = ["connectrpc-otel", "example", "protoc-gen-connectrpc"]

[tool.uv.sources]
connectrpc = { workspace = true }
connectrpc-otel = { workspace = true }
protoc-gen-connectrpc = { workspace = true }

example = { workspace = true }
