[project]
name = "connect-python-conformance"
version = "0.1.0"

dependencies = [
    "brotli",
    "connect-python",
    "httpx[http2]>=0.28.1",
    "hypercorn>=0.17.3",
    "protobuf",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "zstandard",
]

[tool.ruff]
extend = "../pyproject.toml"
