[project]
name = "connect-python-example"
version = "0.1.0"

dependencies = ["connect-python", "flask>=3.1.2", "protobuf>=5.28", "starlette>=0.48.0"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"

[tool.uv.build-backend]
module-name = "example"
module-root = ""
