[project]
name = "connect-python-example"
version = "0.1.0"
dependencies = [
  "connect-python",
  "flask==3.1.3",
  "protobuf>=5.28",
  "starlette==0.52.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"

[tool.uv.build-backend]
module-name = "example"
module-root = ""
