[project]
name = "protoc-gen-connectrpc"
version = "0.9.0"
description = "Code generator for connect-python"
readme = "README.md"
requires-python = ">= 3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [
  { name = "Anuraag Agrawal", email = "anuraaga@gmail.com" },
  { name = "Spencer Nelson", email = "spencer@firetiger.com" },
  { name = "Stefan VanBuren", email = "svanburen@buf.build" },
  { name = "Yasushi Itoh", email = "i2y.may.roku@gmail.com" },
]
keywords = [
  "code-generation",
  "compiler",
  "connect",
  "connect-protocol",
  "connect-rpc",
  "connectrpc",
  "plugin",
  "protobuf",
  "protoc",
  "protocol-buffers",
  "rpc",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Go",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Compilers",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/connectrpc/connect-python"
Issues = "https://github.com/connectrpc/connect-python/issues"
Repository = "https://github.com/connectrpc/connect-python"

[dependency-groups]
dev = ["wheel"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "protoc_gen_connectrpc"
module-root = ""
data = { scripts = "out/bin" }
